==> MichaelOwen2022/infineon_zephyr_connectivity/wifi-host-driver/WiFi_Host_Driver/src/bus_protocols/whd_bus_sdio_protocol.c <==
#include <stdlib.h>
#include "cybsp.h"
#include <zephyr/zephyr.h>
#include <zephyr/sd/sd.h>
#include "cyabs_rtos.h"
#include "whd_bus_sdio_protocol.h"
#include "whd_bus.h"
#include "whd_bus_common.h"
#include "whd_chip_reg.h"
#include "whd_chip_constants.h"
#include "whd_int.h"
#include "whd_chip.h"
#include "whd_sdpcm.h"
#include "whd_debug.h"
#include "whd_sdio.h"
#include "whd_buffer_api.h"
#include "whd_resource_if.h"
#include "whd_types_int.h"
#include "whd_types.h"
#define SBSDIO_SB_OFT_ADDR_MASK     0x07FFF     /* sb offset addr is <= 15 bits, 32k */
#define SBSDIO_SB_OFT_ADDR_LIMIT    0x08000
#define SBSDIO_SB_ACCESS_2_4B_FLAG  0x08000     /* with b15, maps to 32-bit SB access */
#define F0_WORKING_TIMEOUT_MS (500)
#define F1_AVAIL_TIMEOUT_MS   (500)
#define F2_AVAIL_TIMEOUT_MS   (500)
#define F2_READY_TIMEOUT_MS   (1000)
#define ALP_AVAIL_TIMEOUT_MS  (100)
#define HT_AVAIL_TIMEOUT_MS   (500)
#define ABORT_TIMEOUT_MS      (100)
#define SDIO_F2_WATERMARK     (8)
#define INITIAL_READ   4
#define WHD_THREAD_POLL_TIMEOUT      (CY_RTOS_NEVER_TIMEOUT)
#define WHD_THREAD_POKE_TIMEOUT      (100)
#define HOSTINTMASK                 (I_HMB_SW_MASK)

static whd_result_t whd_bus_sdio_cmd52(whd_driver_t whd_driver, whd_bus_transfer_direction_t direction,
                                       whd_bus_function_t function, uint32_t address, uint8_t value,
                                       sdio_response_needed_t response_expected, uint8_t *response)
{
    sdio_cmd_argument_t arg;
    arg.value = 0;
    arg.cmd52.function_number = (uint32_t)(function & BUS_FUNCTION_MASK);
    arg.cmd52.register_address = (uint32_t)(address & 0x00001ffff);
    arg.cmd52.rw_flag = (uint32_t)( (direction == BUS_WRITE) ? 1 : 0 );
    arg.cmd52.write_data = value;

    WHD_BUS_STATS_INCREMENT_VARIABLE(whd_driver->bus_priv, cmd52);

    struct sdhc_command cmd = {0};
    int retval = 0;

    cmd.opcode = SD_RW_IO_DIRECT;
    cmd.arg = arg.value;
    cmd.response_type = SD_RSP_TYPE_R5;
    cmd.timeout_ms = CONFIG_SD_CMD_TIMEOUT;

    retval = sdhc_request(whd_driver->bus_priv->sdio_obj, &cmd, NULL);
    WHD_BUS_STATS_CONDITIONAL_INCREMENT_VARIABLE(whd_driver->bus_priv, (retval != 0), cmd52_fail);

    if (response != NULL) {
        *response = (uint8_t)(cmd.response[0] & 0x00000000ff);
    }

    CHECK_RETURN(retval);
    return WHD_SUCCESS;
}

static whd_result_t whd_bus_sdio_cmd53(whd_driver_t whd_driver, whd_bus_transfer_direction_t direction,
                                       whd_bus_function_t function, sdio_transfer_mode_t mode, uint32_t address,
                                       uint16_t data_size, uint8_t *data,
                                       sdio_response_needed_t response_expected, uint32_t *response)
{
    sdio_cmd_argument_t arg;

    struct sdhc_command cmd = {0};
    struct sdhc_data sdata = {0};
    int retval = 0;

    if (direction == BUS_WRITE)
    {
        WHD_BUS_STATS_INCREMENT_VARIABLE(whd_driver->bus_priv, cmd53_write);
    }

    arg.value = 0;
    arg.cmd53.function_number = (uint32_t)(function & BUS_FUNCTION_MASK);
    arg.cmd53.register_address = (uint32_t)(address & CY_BIT_MASK(17) );
    arg.cmd53.op_code = (uint32_t)1;
    arg.cmd53.rw_flag = (uint32_t)( (direction == BUS_WRITE) ? 1 : 0 );

    if (mode == SDIO_BYTE_MODE)
    {
        whd_assert("whd_bus_sdio_cmd53: data_size > 512 for byte mode", (data_size <= (uint16_t )512) );
        arg.cmd53.count = (uint32_t)(data_size & 0x1FF);

        cmd.opcode = SD_RW_IO_EXTENDED;
        cmd.arg = arg.value;
        cmd.response_type = SD_RSP_TYPE_R5;
        cmd.timeout_ms = CONFIG_SD_CMD_TIMEOUT;

        sdata.block_size = arg.cmd53.count;
        sdata.blocks = 1;
        sdata.data = data;
        sdata.timeout_ms = CONFIG_SD_DATA_TIMEOUT;

        retval = sdhc_request(whd_driver->bus_priv->sdio_obj, &cmd, &sdata);
        if (retval != 0)
        {
            WPRINT_WHD_ERROR( ("%s:%d sdhc_request SDIO_BYTE_MODE failed\n", __func__, __LINE__) );
            goto done;
        }
    }
    else
    {
        arg.cmd53.count = (uint32_t)( (data_size / (uint16_t)SDIO_64B_BLOCK) & CY_BIT_MASK(9) );
        if ( (uint32_t)(arg.cmd53.count * (uint16_t)SDIO_64B_BLOCK) < data_size )
        {
            ++arg.cmd53.count;
        }
        arg.cmd53.block_mode = (uint32_t)1;

        cmd.opcode = SD_RW_IO_EXTENDED;
        cmd.arg = arg.value;
        cmd.response_type = SD_RSP_TYPE_R5;
        cmd.timeout_ms = CONFIG_SD_CMD_TIMEOUT;

        sdata.block_size = SDIO_64B_BLOCK;
        sdata.blocks = arg.cmd53.count;
        sdata.data = data;
        sdata.timeout_ms = CONFIG_SD_DATA_TIMEOUT;

        retval = sdhc_request(whd_driver->bus_priv->sdio_obj, &cmd, &sdata);
        if (retval != 0)
        {
            WPRINT_WHD_ERROR( ("%s:%d sdhc_request failed\n", __func__, __LINE__) );
            goto done;
        }
    }

    if (direction == BUS_READ)
    {
        WHD_BUS_STATS_INCREMENT_VARIABLE(whd_driver->bus_priv, cmd53_read);
    }

    if (response != NULL) {
        *response = cmd.response[0];
    }

done:
    WHD_BUS_STATS_CONDITIONAL_INCREMENT_VARIABLE(whd_driver->bus_priv,
                                                 ( (retval != 0) && (direction == BUS_READ) ),
                                                 cmd53_read_fail);
    WHD_BUS_STATS_CONDITIONAL_INCREMENT_VARIABLE(whd_driver->bus_priv,
                                                 ( (retval != 0) && (direction == BUS_WRITE) ),
                                                 cmd53_write_fail);
    CHECK_RETURN(retval);
    return WHD_SUCCESS;
}

static whd_result_t whd_bus_sdio_register_oob_intr(whd_driver_t whd_driver)
{
    whd_oob_config_t *config = &whd_driver->bus_priv->sdio_config.oob_config;
    struct gpio_dt_spec *host_oob = &(config->host_oob_pin);
    int retval;

    if (!device_is_ready(host_oob->port)) {
		return WHD_SUCCESS;
	}

    retval = gpio_pin_configure_dt(host_oob, GPIO_INPUT);
	if (retval != 0) {
		return retval;
	}

	retval = gpio_pin_interrupt_configure_dt(host_oob, GPIO_INT_EDGE_BOTH);
	if (retval != 0) {
		return retval;
	}

    config->driver = (struct whd_driver *)whd_driver;

    gpio_init_callback(&(config->callback), whd_bus_sdio_oob_irq_handler, BIT(host_oob->pin));

    return WHD_SUCCESS;
}

static whd_result_t whd_bus_sdio_unregister_oob_intr(whd_driver_t whd_driver)
{
    whd_oob_config_t *config = &whd_driver->bus_priv->sdio_config.oob_config;
    struct gpio_dt_spec *host_oob = &(config->host_oob_pin);

    if (!device_is_ready(host_oob->port)) {
		return WHD_SUCCESS;
	}

    gpio_init_callback(&(config->callback), NULL, BIT(host_oob->pin));

    return WHD_SUCCESS;
}

static whd_result_t whd_bus_sdio_enable_oob_intr(whd_driver_t whd_driver, whd_bool_t enable)
{
    whd_oob_config_t *config = &whd_driver->bus_priv->sdio_config.oob_config;
    struct gpio_dt_spec *host_oob = &(config->host_oob_pin);

    printk("%s oob interrupt \r\n", ((enable == WHD_TRUE) ? "Enable" : "Disable"));

    if (enable == WHD_TRUE) {
        gpio_add_callback(host_oob->port, &(config->callback));
    } else {
        gpio_remove_callback(host_oob->port, &(config->callback));
    }

    return WHD_SUCCESS;
}
